Properly implement Eclipse plugin for Apache VFS, including unit tests.